Can't change spline type to bezier #71672

Closed
opened 2019-11-19 11:05:35 +01:00 by softyoda · 6 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: TITAN Xp COLLECTORS EDITION/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.82

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
And
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-18 12:53, hash: 115a5bf65a

Short description of error
I'm trying to set spline type to bezier and i have a message saying : "No conversion possible"
I'm trying to follow instruction from this forum

Exact steps for others to reproduce the error
Add > Curve > Path > Go edit mode while selecting path > Select all > Curve menu > Set spline by type> Bézier

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: TITAN Xp COLLECTORS EDITION/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.82 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` And Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-18 12:53, hash: `115a5bf65a` **Short description of error** I'm trying to set spline type to bezier and i have a message saying : "No conversion possible" I'm trying to follow instruction from this [forum](https://blender.stackexchange.com/a/104484/21822) **Exact steps for others to reproduce the error** Add > Curve > Path > Go edit mode while selecting path > Select all > Curve menu > Set spline by type> Bézier
Author

Added subscriber: @softyoda

Added subscriber: @softyoda
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

The default path curve only has 5 points.
In order to convert from nurbs to bezier, you need at least 6 points [these will end up in two points plus two handles each...]

If this doesnt solve your problem, please attach an example .blend file with you path curve...

The default path curve only has 5 points. In order to convert from nurbs to bezier, you need at least 6 points [these will end up in two points plus two handles each...] If this doesnt solve your problem, please attach an example .blend file with you path curve...
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
softyoda self-assigned this 2019-11-19 11:25:41 +01:00
Author

Thanks, it was that, i think the error : No conversion possible should be renamed by At least 6 points required for conversion

Thanks, it was that, i think the error : `No conversion possible` should be renamed by `At least 6 points required for conversion`

This issue was referenced by 559d01e129

This issue was referenced by 559d01e12949a730f3497fdfbe79a11f532f3afe
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71672
No description provided.